# CoProduct

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  admin_api_keys.py  admin_audit_logs.py  admin_functional_roles.py  admin_member_options.py  admin_members.py  admin_users.py  auth.py  files.py  history.py  prereview.py
backend/app/core/: auth.py  config.py  db.py  logging.py  permissions.py  schema_compat.py  security.py  user_context.py
backend/app/model_client/: __init__.py  base.py  cloud.py  factory.py  heuristic.py  interfaces.py  language_guard.py  structured_output.py
backend/app/models/: __init__.py  prereview.py  user_management.py
backend/app/prompts/: __init__.py  capability_judge.md  impact_analyzer.md  loader.py  missing_info_analyzer.md  report_composer.md  requirement_parser.md  retrieval_planner.md  risk_analyzer.md
backend/app/rag/: __init__.py  bootstrap.py  search.py
backend/app/repositories/: __init__.py  prereview_repository.py  user_repository.py
backend/app/schemas/: __init__.py  analysis.py  capability.py  evidence.py  report.py  requirement.py  (+1 more)
backend/scripts/: __init__.py  backfill_user_ownership.py
backend/tests/: test_agent_phase1_model_client.py  test_m2_persistence_view.py  test_m2_workflow.py  test_m3_services_and_nodes.py  test_phase1_5_async_submission.py  test_phase1_5_missing_info_schema.py  test_phase1_auth_and_scope.py  test_phase2_admin_service.py  test_phase4_admin_members_service.py  test_phase6_api_key_member_options.py
(+168 files in other folders)
